# graphpp

./: .gitignore  CMakeLists.txt  README.md  argument_parser.hpp  main.cpp
example/: graph.gfa  seqs.fa  test.fa  test.gfa  test.xg
